--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "module": "^1.2.5",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20"
   },
